cgo/include/urnetwork_sdk.h

/* ----- callback types ----- */

/* AccountEpochsCallback */
typedef void (*urnet_account_epochs_cb)(void* user_data, const char* result_json, const char* err_param);
/* AccountPreferencesGetCallback */
typedef void (*urnet_account_preferences_get_cb)(void* user_data, const char* result_json, const char* err_param);
/* AccountPreferencesSetCallback */
typedef void (*urnet_account_preferences_set_cb)(void* user_data, const char* result_json, const char* err_param);
/* AccountWalletsListener */
typedef void (*urnet_account_wallets_cb)(void* user_data);
/* ActiveNetworkSpaceChangeListener */
typedef void (*urnet_active_network_space_change_cb)(void* user_data, uint64_t network_space);
/* AddAuthCallback */
typedef void (*urnet_add_auth_cb)(void* user_data, const char* result_json, const char* err_param);
/* AllowForegroundChangeListener */
typedef void (*urnet_allow_foreground_change_cb)(void* user_data, bool allow_foreground);
/* AllowProductUpdatesListener */
typedef void (*urnet_allow_product_updates_cb)(void* user_data, bool p0);
/* AuthCodeCreateCallback */
typedef void (*urnet_auth_code_create_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthCodeLoginCallback */
typedef void (*urnet_auth_code_login_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthLoginCallback */
typedef void (*urnet_auth_login_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthLoginWithPasswordCallback */
typedef void (*urnet_auth_login_with_password_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthLogoutListener */
typedef void (*urnet_auth_logout_cb)(void* user_data);
/* AuthNetworkClientCallback */
typedef void (*urnet_auth_network_client_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthPasswordResetCallback */
typedef void (*urnet_auth_password_reset_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthVerifyCallback */
typedef void (*urnet_auth_verify_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthVerifySendCallback */
typedef void (*urnet_auth_verify_send_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthWalletChallengeCallback */
typedef void (*urnet_auth_wallet_challenge_cb)(void* user_data, const char* result_json, const char* err_param);
/* BlockActionOverridesChangeListener */
typedef void (*urnet_block_action_overrides_change_cb)(void* user_data, const char* block_action_overrides_json);
/* BlockActionStatsListener */
typedef void (*urnet_block_action_stats_cb)(void* user_data);
/* BlockActionWindowChangeListener */
typedef void (*urnet_block_action_window_change_cb)(void* user_data, const char* block_action_window_json);
/* BlockActionsListener */
typedef void (*urnet_block_actions_cb)(void* user_data);
/* BlockStatsChangeListener */
typedef void (*urnet_block_stats_change_cb)(void* user_data, const char* block_stats_json);
/* BlockerEnabledChangeListener */
typedef void (*urnet_blocker_enabled_change_cb)(void* user_data, bool blocker_enabled);
/* CanPromptIntroFunnelChangeListener */
typedef void (*urnet_can_prompt_intro_funnel_change_cb)(void* user_data, bool can_prompt_intro_funnel);
/* CanReferChangeListener */
typedef void (*urnet_can_refer_change_cb)(void* user_data, bool can_refer);
/* CanShowRatingDialogChangeListener */
typedef void (*urnet_can_show_rating_dialog_change_cb)(void* user_data, bool can_show_rating_dialog);
/* ChangeNetworkNameCallback */
typedef void (*urnet_change_network_name_cb)(void* user_data, const char* result_json, const char* err_param);
/* CheckBalanceCodeCallback */
typedef void (*urnet_check_balance_code_cb)(void* user_data, const char* result_json, const char* err_param);
/* ClaimNetworkNameCallback */
typedef void (*urnet_claim_network_name_cb)(void* user_data, const char* result_json, const char* err_param);
/* ClientEventsSendCallback */
typedef void (*urnet_client_events_send_cb)(void* user_data, const char* result_json, const char* err_param);
/* CommitCallback */
typedef void (*urnet_commit_cb)(void* user_data, bool success);
/* ConnectChangeListener */
typedef void (*urnet_connect_change_cb)(void* user_data, bool connect_enabled);
/* ConnectLocationChangeListener */
typedef void (*urnet_connect_location_change_cb)(void* user_data, const char* location_json);
/* ConnectedProviderLocationChangeListener */
typedef void (*urnet_connected_provider_location_change_cb)(void* user_data);
/* ConnectionStatusListener */
typedef void (*urnet_connection_status_cb)(void* user_data);
/* ContractDetailsChangeListener */
typedef void (*urnet_contract_details_change_cb)(void* user_data, const char* contract_details_json);
/* ContractRowsListener */
typedef void (*urnet_contract_rows_cb)(void* user_data);
/* ContractStatsChangeListener */
typedef void (*urnet_contract_stats_change_cb)(void* user_data, const char* contract_stats_json);
/* ContractStatusChangeListener */
typedef void (*urnet_contract_status_change_cb)(void* user_data, const char* contract_status_json);
/* CreateAccountWalletCallback */
typedef void (*urnet_create_account_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* CreateApiKeyCallback */
typedef void (*urnet_create_api_key_cb)(void* user_data, const char* result_json, const char* err_param);
/* DefaultLocationChangeListener */
typedef void (*urnet_default_location_change_cb)(void* user_data, const char* location_json);
/* DeleteApiKeyCallback */
typedef void (*urnet_delete_api_key_cb)(void* user_data, const char* result_json, const char* err_param);
/* DeviceRecreatedListener */
typedef void (*urnet_device_recreated_cb)(void* user_data);
/* DeviceSetNameCallback */
typedef void (*urnet_device_set_name_cb)(void* user_data, const char* result_json, const char* err_param);
/* DnsResolverSettingsChangeListener */
typedef void (*urnet_dns_resolver_settings_change_cb)(void* user_data, const char* dns_resolver_settings_json);
/* ExtenderProvideStatusChangeListener */
typedef void (*urnet_extender_provide_status_change_cb)(void* user_data, const char* status_json);
/* ExtenderStatusChangeListener */
typedef void (*urnet_extender_status_change_cb)(void* user_data, const char* status_json);
/* ExtenderViewControllerListener */
typedef void (*urnet_extender_view_controller_cb)(void* user_data, const char* status_json);
/* FilteredLocationsListener */
typedef void (*urnet_filtered_locations_cb)(void* user_data, const char* locations_json, const char* state);
/* FindLocationsCallback */
typedef void (*urnet_find_locations_cb)(void* user_data, const char* result_json, const char* err_param);
/* FindProviders2Callback */
typedef void (*urnet_find_providers2_cb)(void* user_data, const char* result_json, const char* err_param);
/* FindProvidersCallback */
typedef void (*urnet_find_providers_cb)(void* user_data, const char* result_json, const char* err_param);
/* FlowOwnerLookup */
typedef char* (*urnet_flow_owner_lookup_cb)(void* user_data, int64_t version, int64_t protocol, const char* source_ip, int64_t source_port, const char* destination_ip, int64_t destination_port);
/* GenerateSeedphraseCallback */
typedef void (*urnet_generate_seedphrase_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetAccountPaymentsCallback */
typedef void (*urnet_get_account_payments_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetAccountPointsCallback */
typedef void (*urnet_get_account_points_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetAccountWalletsCallback */
typedef void (*urnet_get_account_wallets_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetByClientJwtCallback */
typedef void (*urnet_get_by_client_jwt_cb)(void* user_data, const char* result, bool ok_param);
/* GetByJwtCallback */
typedef void (*urnet_get_by_jwt_cb)(void* user_data, const char* result, bool ok_param);
/* GetInstanceIdCallback */
typedef void (*urnet_get_instance_id_cb)(void* user_data, const char* result, bool ok_param);
/* GetLeaderboardCallback */
typedef void (*urnet_get_leaderboard_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkBlockedLocationsCallback */
typedef void (*urnet_get_network_blocked_locations_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkClientsCallback */
typedef void (*urnet_get_network_clients_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkLeaderboardRankingCallback */
typedef void (*urnet_get_network_leaderboard_ranking_cb)(void* user_data, const char* result_json, const char* err_param);