csharp/Raw.g.cs

// Generated by packaging/generate.go. Do not edit.
using System;
using System.Runtime.InteropServices;
namespace URnetwork.SDK;
public static partial class Raw {
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_account_epochs_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_account_preferences_get_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_account_preferences_set_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_account_wallets_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_active_network_space_change_cb(IntPtr a0, ulong a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_add_auth_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_allow_foreground_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_allow_product_updates_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_auth_code_create_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_auth_code_login_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_auth_login_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_auth_login_with_password_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_auth_logout_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_auth_network_client_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_auth_password_reset_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_auth_verify_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_auth_verify_send_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_auth_wallet_challenge_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_block_action_overrides_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_block_action_stats_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_block_action_window_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_block_actions_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_block_stats_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_blocker_enabled_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_can_prompt_intro_funnel_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_can_refer_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_can_show_rating_dialog_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_change_network_name_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_check_balance_code_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_claim_network_name_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_client_events_send_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_commit_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_connect_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_connect_location_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_connected_provider_location_change_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_connection_status_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_contract_details_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_contract_rows_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_contract_stats_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_contract_status_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_create_account_wallet_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_create_api_key_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_default_location_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_delete_api_key_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_device_recreated_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_device_set_name_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_dns_resolver_settings_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_extender_provide_status_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_extender_status_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_extender_view_controller_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_filtered_locations_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_find_locations_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_find_providers2_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_find_providers_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate IntPtr urnet_flow_owner_lookup_cb(IntPtr a0, long a1, long a2, [MarshalAs(UnmanagedType.LPUTF8Str)] string a3, long a4, [MarshalAs(UnmanagedType.LPUTF8Str)] string a5, long a6);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_generate_seedphrase_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_account_payments_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_account_points_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_account_wallets_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_by_client_jwt_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, byte a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_by_jwt_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, byte a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_instance_id_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, byte a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_leaderboard_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_network_blocked_locations_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_network_clients_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_network_leaderboard_ranking_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
